# backend/internal/app/api/product/get_for_bot.go
@@ -6,14 +6,12 @@ import (
 
 	"github.com/Nikita-Kolbin/tg-bot-creation/backend/internal/app/api/dto"
 	"github.com/Nikita-Kolbin/tg-bot-creation/backend/internal/pkg/logger"
-	"github.com/Nikita-Kolbin/tg-bot-creation/backend/internal/pkg/middleware"
 	"github.com/go-chi/chi/v5"
 	"github.com/go-chi/render"
 )
 
-// GetProducts godoc
-// @Summary      Get all products for bot
-// @Security     ApiKeyAuth
+// GetActiveProducts godoc
+// @Summary      Get active products for bot
 // @Tags         product
 // @Produce      json
 // @Param        bot_id path      int true "Bot ID"
@@ -22,8 +20,8 @@ import (
 // @Failure      401   {object}   dto.ErrorResponse
 // @Failure      403   {object}   dto.ErrorResponse
 // @Failure      500   {object}   dto.ErrorResponse
-// @Router       /bot/{bot_id}/products [get]
-func (i *Product) GetProducts(w http.ResponseWriter, r *http.Request) {
+// @Router       /bot/{bot_id}/active_products [get]
+func (i *Product) GetActiveProducts(w http.ResponseWriter, r *http.Request) {
 	ctx := r.Context()
 
 	botIDStr := chi.URLParam(r, "bot_id")
@@ -35,9 +33,7 @@ func (i *Product) GetProducts(w http.ResponseWriter, r *http.Request) {
 		return
 	}
 
-	userID := middleware.GetUserId(ctx)
-
-	products, err := i.srv.GetProductsByBot(ctx, int64(botID), false)
+	products, err := i.srv.GetProductsByBot(ctx, int64(botID), true)
 	if err != nil {
 		logger.Error(ctx, "failed to get products", "err", err, "bot_id", botID)
 		render.Status(r, http.StatusInternalServerError)
@@ -52,7 +48,7 @@ func (i *Product) GetProducts(w http.ResponseWriter, r *http.Request) {
 		resp.Products = append(resp.Products, dto.ProductToResponse(product))
 	}
 
-	logger.Info(ctx, "products retrieved", "bot_id", botID, "count", len(products), "user_id", userID)
+	logger.Info(ctx, "products retrieved", "bot_id", botID, "count", len(products))
 	render.Status(r, http.StatusOK)
 	render.JSON(w, r, resp)
 }
